--- a/Views/index.html.twig
+++ b/Views/index.html.twig
@@ -2,126 +2,128 @@
 <html lang="fr">
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="">
-	<meta name="author" content="">
-	<title>MMI Castres - Gestionnaire de Projets</title>
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<!-- Bootstrap core CSS -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-		  integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<link rel="stylesheet" href="design.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <title>MMI Castres - Gestionnaire de Projets</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- Bootstrap core CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="design.css">
 </head>
 
 <body>
 <!-- Navbar -->
 <nav class="navbar navbar-expand-md navbar-dark">
-	<!-- Container wrapper -->
-	<div id="menu" class="container-fluid">
-		<!-- Navbar brand -->
-		<a class="navbar-brand" href="#top"><img id="logo" src="img/LOGO_MMi.webp" alt="logo de mmi castres"
-												 class="img-fluid"></a>
+    <!-- Container wrapper -->
+    <div id="menu" class="container-fluid">
+        <!-- Navbar brand -->
+        <a class="navbar-brand" href="#top"><img id="logo" src="img/LOGO_MMi.webp" alt="logo de mmi castres"
+                                                 class="img-fluid"></a>
 
-		<!-- Navbar toggler button -->
-		<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-				data-bs-target="#navbarButtonsExample">
-			<span class="navbar-toggler-icon"></span>
-		</button>
+        <!-- Navbar toggler button -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarButtonsExample">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-		<!-- Collapsible wrapper -->
-		<div class="collapse navbar-collapse" id="navbarButtonsExample">
-			<!-- Left links -->
-			<ul class="navbar-nav ms-md-5">
-				<li class="nav-item ">
-					<a class="nav-link ps-3" href="?action=accueil">Accueil</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link ms-md-auto" href="?action=projets">Projets</a>
-				</li>
-				{% if acces == "oui" %}
-					<li class="nav-item"><a class="nav-link" href="?action=mesprojets">Mes Projets</a></li>
-					<li class="nav-item"><a class="nav-link" href="?action=ajout">Ajouter Projets</a></li>
-					<li class="nav-item"><a class="nav-link" href="?action=modif">Modifier Projets</a></li>
-					<li class="nav-item"><a class="nav-link" href="?action=suppr">Supprimer Projets</a></li>
-				{% endif %}
+        <!-- Collapsible wrapper -->
+        <div class="collapse navbar-collapse" id="navbarButtonsExample">
+            <!-- Left links -->
+            <ul class="navbar-nav ms-md-5">
+                <li class="nav-item ">
+                    <a class="nav-link ps-3" href="?action=accueil">Accueil</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link ms-md-auto" href="?action=projets">Projets</a>
+                </li>
+                {% if acces == "oui" %}
+                    <li class="nav-item"><a class="nav-link" href="?action=mesprojets">Mes Projets</a></li>
+                    <li class="nav-item"><a class="nav-link" href="?action=ajout">Ajouter Projets</a></li>
+                    <li class="nav-item"><a class="nav-link" href="?action=modif">Modifier Projets</a></li>
+                    <li class="nav-item"><a class="nav-link" href="?action=suppr">Supprimer Projets</a></li>
+                {% endif %}
 
-				{% if admin == "oui" %}
-					<div class="dropdown">
-						<button type="button" class="btn btn-outline-light dropdown-toggle" data-bs-toggle="dropdown">
-							Espace Admin
-						</button>
-						<ul class="dropdown-menu">
-							<li><a class="dropdown-item" href="?action=cateadmin">Gestion Catégorie</a></li>
-							<li><a class="dropdown-item" href="?action=contadmin">Gestion Contexte</a></li>
-							<li><a class="dropdown-item" href="?action=utiadmin">Gestion Utilisateur</a></li>
-						</ul>
-					</div>
-				{% endif %}
-			</ul>
-			<!-- right links -->
+                {% if admin == "oui" %}
+                    <div class="dropdown">
+                        <button type="button" class="btn btn-outline-light dropdown-toggle" data-bs-toggle="dropdown">
+                            Espace Admin
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="?action=cateadmin">Gestion Catégorie</a></li>
+                            <li><a class="dropdown-item" href="?action=contadmin">Gestion Contexte</a></li>
+                            <li><a class="dropdown-item" href="?action=utiadmin">Gestion Utilisateur</a></li>
+                        </ul>
+                    </div>
+                {% endif %}
+            </ul>
+            <!-- right links -->
 
-			<div class="d-flex align-items-center ms-md-auto">
-				{% if acces == "oui" %}
-					<a class="nav-link" href="?action=logout">Deconnexion</a>
-					<a class="navbar-brand" href="?action=infoprofil">
-						<img class="rounded-circle" id="profil" alt="photo de profil" src="photodeprofil/{{photodeprofil}}" />
-					</a>
-				{% else %}
-					<a class="nav-link" href="?action=login">Connexion</a>
-					<a class="btn btn-outline-light" href="?action=inscription" role="button">Inscription ➜</a>
-				{% endif %}
-			</div>
-		</div>
-		<!-- Collapsible wrapper -->
-	</div>
-	<!-- Container wrapper -->
+            <div class="d-flex align-items-center ms-md-auto">
+                {% if acces == "oui" %}
+                    <a class="nav-link" href="?action=logout">Deconnexion</a>
+                    <a class="navbar-brand" href="?action=infoprofil">
+                        <img class="rounded-circle" id="profil" alt="photo de profil"
+                             src="photodeprofil/{{ photodeprofil }}"/>
+                    </a>
+                {% else %}
+                    <a class="nav-link" href="?action=login">Connexion</a>
+                    <a class="btn btn-outline-light" href="?action=inscription" role="button">Inscription ➜</a>
+                {% endif %}
+            </div>
+        </div>
+        <!-- Collapsible wrapper -->
+    </div>
+    <!-- Container wrapper -->
 </nav>
 
 <div class="container-fluid text-center">
-	{% block div %}
-		{{message}}
-	{% endblock %}
+    {% block div %}
+        {{ message }}
+    {% endblock %}
 </div>
 
 <!-- Main content -->
 <div class="container">
-	{% block section %}
-		{{message}}
-	{% endblock %}
+    {% block section %}
+        {{ message }}
+    {% endblock %}
 </div>
 
 <!-- Footer -->
 <footer class="py-3">
-	<div class="container-fluid text-center">
-		<ul class="nav justify-content-center border-bottom pb-3" id="navfoot">
-			<li class="nav-item "><a href="?action=accueil" class="nav-link px-3 mx-3 text-body-secondary">Accueil</a>
-			</li>
-			<li class="nav-item "><a href="?action=projets"
-									 class="nav-link px-3 mx-3 text-body-secondary">Projets</a></li>
-			<li class="nav-item "><a href="?action=contact"
-									 class="nav-link px-3 mx-3 text-body-secondary">Contact</a></li>
-		</ul>
-		<ul class="nav d-flex justify-content-around pt-3">
-			<li class="nav-item">
-				<p class="text-center text-body-secondary">© 2023 Lucas Boustens. All rights reserved.</p>
-			</li>
-			<li class="nav-item"><a href="#top"><img id="logo" src="img/LOGO_MMi.webp"
-													 alt="logo de mmi castres"></a></li>
-			<li class="nav-item d-flex flex-row"><a href="?action=mentions"
-													class="nav-link px-2 text-body-secondary">Mentions Légales</a> <a href="?action=politique"
-																													  class="nav-link px-2 text-body-secondary">Politique de Confidentialité</a></li>
-		</ul>
-	</div>
+    <div class="container-fluid text-center">
+        <ul class="nav justify-content-center border-bottom pb-3" id="navfoot">
+            <li class="nav-item "><a href="?action=accueil" class="nav-link px-3 mx-3 text-body-secondary">Accueil</a>
+            </li>
+            <li class="nav-item "><a href="?action=projets"
+                                     class="nav-link px-3 mx-3 text-body-secondary">Projets</a></li>
+            <li class="nav-item "><a href="?action=contact"
+                                     class="nav-link px-3 mx-3 text-body-secondary">Contact</a></li>
+        </ul>
+        <ul class="nav d-flex justify-content-around pt-3">
+            <li class="nav-item">
+                <p class="text-center text-body-secondary">© 2023 Lucas Boustens. All rights reserved.</p>
+            </li>
+            <li class="nav-item"><a href="#top"><img id="logo" src="img/LOGO_MMi.webp"
+                                                     alt="logo de mmi castres"></a></li>
+            <li class="nav-item d-flex flex-row"><a href="?action=mentions"
+                                                    class="nav-link px-2 text-body-secondary">Mentions Légales</a> <a
+                        href="?action=politique"
+                        class="nav-link px-2 text-body-secondary">Politique de Confidentialité</a></li>
+        </ul>
+    </div>
 </footer>
 
 <!-- Bootstrap JavaScript dependencies -->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-		integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-		crossorigin="anonymous"></script>
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-		integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-		crossorigin="anonymous"></script>
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
 <script src="script.js" defer></script>
 </body>
 
