--- a/Views/accueil.html.twig
+++ b/Views/accueil.html.twig
@@ -2,8 +2,10 @@
 
 {% block div %}
     <div id="head-container" class="text-center">
-        <img id="head" class="mx-auto d-block pt-4 img-fluid" src="img/butmmi.webp" alt="image informative sur le BUT MMI">
-        <a id="decouvrir" href="#objectif" class="btn btn-outline-light col-12 col-md-6 col-lg-4 py-3 py-md-5" role="button">Découvrir l’Objectif de l’Application</a>
+        <img id="head" class="mx-auto d-block pt-4 img-fluid" src="img/butmmi.webp"
+             alt="image informative sur le BUT MMI">
+        <a id="decouvrir" href="#objectif" class="btn btn-outline-light col-12 col-md-6 col-lg-4 py-3 py-md-5"
+           role="button">Découvrir l’Objectif de l’Application</a>
     </div>
 {% endblock %}
 
@@ -11,11 +13,21 @@
     <h1 id="objectif" class="text-center pb-3">LE But De l’Application </h1>
     <div class="container">
         <p class="px-2 px-md-5 mx-2 mx-md-5">
-            Ce projet a pour but de mettre en œuvre les enseignements des modules “Design d’expérience”, “Développement Front et intégration”, “Développement Back”, “Gestion de projet”, et plus généralement l’ensemble des enseignements de 1ère année (HTML, CSS, modélisation, SQL, ergonomie, etc.). Le sujet retenu est la réalisation d’une application web de consultation et gestion des projets étudiants du BUT MMI. L’objectif est d’avoir une plateforme qui centralise l’ensemble des projets qui sont réalisés chaque année au département MMI. Les utilisateurs de l’application pourront donc consulter les projets réalisés par les précédentes promotions et ajouter à leur tour les projets auxquels ils ont participé. Dans ce document seront décrits les éléments et les fonctionnalités attendues. Toutefois, la réalisation de ce projet est assez libre et vous êtes encouragés à prendre des initiatives, et donc à proposer des améliorations par rapport à la version basique.
+            Ce projet a pour but de mettre en œuvre les enseignements des modules “Design d’expérience”, “Développement
+            Front et intégration”, “Développement Back”, “Gestion de projet”, et plus généralement l’ensemble des
+            enseignements de 1ère année (HTML, CSS, modélisation, SQL, ergonomie, etc.). Le sujet retenu est la
+            réalisation d’une application web de consultation et gestion des projets étudiants du BUT MMI. L’objectif
+            est d’avoir une plateforme qui centralise l’ensemble des projets qui sont réalisés chaque année au
+            département MMI. Les utilisateurs de l’application pourront donc consulter les projets réalisés par les
+            précédentes promotions et ajouter à leur tour les projets auxquels ils ont participé. Dans ce document
+            seront décrits les éléments et les fonctionnalités attendues. Toutefois, la réalisation de ce projet est
+            assez libre et vous êtes encouragés à prendre des initiatives, et donc à proposer des améliorations par
+            rapport à la version basique.
         </p>
     </div>
 
     <div id="head-container" class="text-center">
-        <a href="?action=projets" class="btn btn-outline-light col-12 col-md-6 col-lg-4 py-3 py-md-5 mt-3" role="button">Découvrir les projets des étudiants</a>
+        <a href="?action=projets" class="btn btn-outline-light col-12 col-md-6 col-lg-4 py-3 py-md-5 mt-3"
+           role="button">Découvrir les projets des étudiants</a>
     </div>
 {% endblock %}
