--- a/Views/detailproj.html.twig
+++ b/Views/detailproj.html.twig
@@ -3,138 +3,147 @@
 {% block section %}
 
 
-		<h1 class="text-center pb-3">
-		{{projs.titre}}
-			</h1>
-		<p class="px-2 px-md-5 mx-2 mx-md-5 text-center mb-3">
-			{{projs.descproj}}
-		</p>
-		<!-- Détails du projet -->
-		<div class="row">
-			<div class="col-md-10 mx-auto text-center">
-				<!-- Deux div en row -->
-				<div class="row ">
-					<!-- Div de gauche -->
-					<div class="col-md-7">
-						<p><strong>Catégorie : </strong> {% for detailcate in detailcates %}{{detailcate.nomcate}}{% endfor %}</p>
-						<p><strong>Tags : </strong>{% for detailtag in detailtags %} {{detailtag.nomtag}} {% endfor %}</p>
-						<p><strong>Créateur(s) :</strong>{% for detailuti in detailutis %} {{detailuti.prenom}} {{detailuti.nom}}{% endfor %}</p>
-						<p><strong>Contexte : </strong>{% for detailcont in detailconts %}{{detailcont.identifiant}} - {{detailcont.semestre}} - {{detailcont.intitule}}{% endfor %}</p>
-						<p><strong>Lien de la démo : </strong><a href="{{projs.liendemo}}">{{projs.liendemo}}</a></p>
-						<p> <strong>Lien des sources : </strong> {% for detailsource in detailsources %}<a href="{{detailsource.url}}">{{detailsource.url}}</a>{% endfor %}</p>
-					</div>
-					<!-- Div de droite avec l'image de représentation -->
-					<div class="col-md-4 text-center">
-						<img src="img/{{projs.image}}" alt="Image de représentation du projet" class="img-fluid">
-						<p class="mt-3 text-end">
-							<strong>Année de création :</strong> {{projs.anneecrea}}
-						</p>
-					</div>
-				</div>
+    <h1 class="text-center pb-3">
+        {{ projs.titre }}
+    </h1>
+    <p class="px-2 px-md-5 mx-2 mx-md-5 text-center mb-3">
+        {{ projs.descproj }}
+    </p>
+    <!-- Détails du projet -->
+    <div class="row">
+        <div class="col-md-10 mx-auto text-center">
+            <!-- Deux div en row -->
+            <div class="row ">
+                <!-- Div de gauche -->
+                <div class="col-md-7">
+                    <p><strong>Catégorie : </strong> {{ detailcates.nomcate }}</p>
+                    <p><strong>Tags : </strong>{{ detailtags.nomtag }}</p>
+                    <p><strong>Créateur(s) :</strong> {{ detailutis.prenom }} {{ detailutis.nom }}</p>
+                    <p><strong>Contexte : </strong>{{ detailconts.identifiant }} - {{ detailconts.semestre }}
+                        - {{ detailconts.intitule }}</p>
+                    <p><strong>Lien de la démo : </strong><a href="{{ projs.liendemo }}">{{ projs.liendemo }}</a></p>
+                    <p><strong>Lien des sources : </strong><a href="{{ detailsources.url }}">{{ detailsources.url }}</a>
+                    </p>
+                </div>
+                <!-- Div de droite avec l'image de représentation -->
+                <div class="col-md-4 text-center">
+                    <img src="img/{{ projs.image }}" alt="Image de représentation du projet" class="img-fluid">
+                    <p class="mt-3 text-end">
+                        <strong>Année de création :</strong> {{ projs.anneecrea }}
+                    </p>
+                </div>
+            </div>
 
-				<!-- Bouton de retour -->
-				<div class="text-center">
-					<a href="?action=projets" class="btn btn-primary mt-3">Retour aux projets</a>
-				</div>
-			</div>
-		</div>
+            <!-- Bouton de retour -->
+            <div class="text-center mb-3">
+                <a href="?action=projets" class="btn btn-primary mt-3">Retour aux projets</a>
+            </div>
+        </div>
+    </div>
 
-	<div class="container mt-5">
-		<div class="row">
-			<div class="col-md-6">
-				<h2>Commentaires</h2>
+    <div class="container mt-2">
+        <!-- Formulaire d'ajout de commentaire et de notation -->
+        <div class="row">
+            <!-- Formulaire d'ajout de commentaire (2/3 de la largeur) -->
+            <div class="col-md-6">
+                <form action="index.php" method="post" class="mt-3">
+                    <div class="form-group">
+                        <label for="messcom">Ajouter un commentaire :</label>
+                        <textarea class="form-control" id="messcom" name="messcom" rows="3" required></textarea>
+                    </div>
+                    <input type="hidden" id="idutilisateur" name="idutilisateur" value="{{ idutilisateur }}"/>
+                    <input type="hidden" id="idprojet" name="idprojet" value="{{ projs.idprojet }}"/>
 
-				<!-- Affichage des commentaires -->
-				<div class="card">
-					{% for comment in comments %}
-						<div class="card-body">
-							<div class="d-flex flex-start align-items-center">
-								<img class="rounded-circle shadow-1-strong me-3"
-									 src="photodeprofil/{{comment.utilisateur.photodeprofil}}" alt="photo de profil" width="60"
-									 height="60" />
-								<div>
-									<p class="fw-bold text-primary mb-1"><strong>{{comment.utilisateur.prenom}} {{comment.utilisateur.nom}}</strong></p>
-									<p class="text-muted small mb-0">
-										Publié le {{comment.datepublimess}}
-									</p>
-								</div>
-							</div>
-							<p class="mt-3 mb-4 pb-2 text-dark">
-								{{comment.messcom}}
-							</p>
-						</div>
-					{% endfor %}
-				</div>
-			</div>
+                    <button type="submit" name="ajouter_comment" class="btn btn-primary mt-2">Ajouter un commentaire
+                    </button>
+                </form>
+            </div>
 
-			<!-- Section des notes (1/3 de la largeur) -->
-			<div class="col-md-4 mx-5 ">
-				<!-- Affichage des notes -->
-				<h2>Notes</h2>
-				<div class="card text-dark">
-					{% for note in notes %}
-						<div class="card-body">
-							<div class="d-flex flex-start align-items-center">
-								<img class="rounded-circle shadow-1-strong me-3"
-									 src="photodeprofil/{{note.utilisateur.photodeprofil}}" alt="photo de profil" width="60"
-									 height="60" />
-								<div>
-									<p class="fw-bold text-primary mb-1"><strong>{{note.utilisateur.prenom}} {{note.utilisateur.nom}}</strong></p>
-									<p class="text-muted small mb-0">
-										Publié le {{note.datepublinote}}
-									</p>
-								</div>
-							</div>
-							<p class="mt-3 mb-4 pb-2 text-dark">
-								{% if note.note >= 1 %} &#9733; {% endif %}
-								{% if note.note >= 2 %} &#9733; {% endif %}
-								{% if note.note >= 3 %} &#9733; {% endif %}
-								{% if note.note >= 4 %} &#9733; {% endif %}
-								{% if note.note >= 5 %} &#9733; {% endif %}
-							</p>
-						</div>
-					{% endfor %}
-				</div>
-			</div>
-		</div>
-	</div>
+            <!-- Formulaire de notation (1/3 de la largeur) -->
+            <div class="col-md-4 pt-4 mx-5">
+                <form action="index.php" method="post">
+                    <div class="form-group">
+                        <label for="note">Notation :</label>
+                        <div class="rating">
+                            <input type="radio" id="star5" name="note" value="5"><label for="star5">&#9733;</label>
+                            <input type="radio" id="star4" name="note" value="4"><label for="star4">&#9733;</label>
+                            <input type="radio" id="star3" name="note" value="3"><label for="star3">&#9733;</label>
+                            <input type="radio" id="star2" name="note" value="2"><label for="star2">&#9733;</label>
+                            <input type="radio" id="star1" name="note" value="1"><label for="star1">&#9733;</label>
+                        </div>
+                        <input type="hidden" id="idutilisateur" name="idutilisateur" value="{{ idutilisateur }}"/>
+                        <input type="hidden" id="idprojet" name="idprojet" value="{{ projs.idprojet }}"/>
+                        <button type="submit" id="btnSubmit" name="ajouter_note" class="btn btn-primary">Envoyer la
+                            note
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md-6">
+                <h2>Commentaires</h2>
 
-<div class="container mt-2">
-		<!-- Formulaire d'ajout de commentaire et de notation -->
-		<div class="row">
-			<!-- Formulaire d'ajout de commentaire (2/3 de la largeur) -->
-			<div class="col-md-6">
-				<form action="index.php" method="post" class="mt-3">
-					<div class="form-group">
-						<label for="messcom">Ajouter un commentaire :</label>
-						<textarea class="form-control" id="messcom" name="messcom" rows="3" required></textarea>
-					</div>
-					<input  type="hidden" id="idutilisateur" name="idutilisateur" value="{{idutilisateur}}"/>
-					<input  type="hidden" id="idprojet" name="idprojet" value="{{projs.idprojet}}"/>
+                <!-- Affichage des commentaires -->
+                <div class="card">
+                    {% for comment in comments %}
+                        <div class="card-body">
+                            <div class="d-flex flex-start align-items-center">
+                                <img class="rounded-circle shadow-1-strong me-3"
+                                     src="photodeprofil/{{ comment.utilisateur.photodeprofil }}" alt="photo de profil"
+                                     width="60"
+                                     height="60"/>
+                                <div>
+                                    <p class="fw-bold text-primary mb-1">
+                                        <strong>{{ comment.utilisateur.prenom }} {{ comment.utilisateur.nom }}</strong>
+                                    </p>
+                                    <p class="text-muted small mb-0">
+                                        Publié le {{ comment.datepublimess }}
+                                    </p>
+                                </div>
+                            </div>
+                            <p class="mt-3 mb-4 pb-2 text-dark">
+                                {{ comment.messcom }}
+                            </p>
+                        </div>
+                    {% endfor %}
+                </div>
+            </div>
 
-					<button type="submit" name="ajouter_comment" class="btn btn-primary mt-2">Ajouter un commentaire</button>
-				</form>
-			</div>
-
-			<!-- Formulaire de notation (1/3 de la largeur) -->
-			<div class="col-md-4 pt-4 mx-5">
-				<form action="index.php" method="post">
-					<div class="form-group">
-						<label for="note">Notation :</label>
-						<div class="rating">
-							<input type="radio" id="star5" name="note" value="5"><label for="star5">&#9733;</label>
-							<input type="radio" id="star4" name="note" value="4"><label for="star4">&#9733;</label>
-							<input type="radio" id="star3" name="note" value="3"><label for="star3">&#9733;</label>
-							<input type="radio" id="star2" name="note" value="2"><label for="star2">&#9733;</label>
-							<input type="radio" id="star1" name="note" value="1"><label for="star1">&#9733;</label>
-						</div>
-						<input  type="hidden" id="idutilisateur" name="idutilisateur" value="{{idutilisateur}}"/>
-						<input  type="hidden" id="idprojet" name="idprojet" value="{{projs.idprojet}}"/>
-						<button type="submit" id="btnSubmit" name="ajouter_note" class="btn btn-primary">Envoyer la note</button>
-					</div>
-				</form>
-			</div>
-		</div>
-</div>
-		{% endblock %}
+            <!-- Section des notes (1/3 de la largeur) -->
+            <div class="col-md-4 mx-5 ">
+                <!-- Affichage des notes -->
+                <h2>Notes</h2>
+                <div class="card text-dark">
+                    {% for note in notes %}
+                        <div class="card-body">
+                            <div class="d-flex flex-start align-items-center">
+                                <img class="rounded-circle shadow-1-strong me-3"
+                                     src="photodeprofil/{{ note.utilisateur.photodeprofil }}" alt="photo de profil"
+                                     width="60"
+                                     height="60"/>
+                                <div>
+                                    <p class="fw-bold text-primary mb-1">
+                                        <strong>{{ note.utilisateur.prenom }} {{ note.utilisateur.nom }}</strong></p>
+                                    <p class="text-muted small mb-0">
+                                        Publié le {{ note.datepublinote }}
+                                    </p>
+                                </div>
+                            </div>
+                            <p class="mt-3 mb-4 pb-2 text-dark">
+                                {% if note.note >= 1 %} &#9733; {% endif %}
+                                {% if note.note >= 2 %} &#9733; {% endif %}
+                                {% if note.note >= 3 %} &#9733; {% endif %}
+                                {% if note.note >= 4 %} &#9733; {% endif %}
+                                {% if note.note >= 5 %} &#9733; {% endif %}
+                            </p>
+                        </div>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock %}
