--- a/Views/infoprofil.html.twig
+++ b/Views/infoprofil.html.twig
@@ -5,34 +5,35 @@
     <div class="container">
 
         <h1 class="text-center pb-3">
-            {{utis.prenom}} {{utis.nom}}
+            {{ utis.prenom }} {{ utis.nom }}
         </h1>
         <!-- Info du profil -->
-            <div class="col-md-8 mx-auto text-center ">
-                <!-- Deux div en row -->
-                <div class="row d-flex justify-content-center">
-                    <!-- Div de gauche -->
-                    <div class="col-md-6 d-flex flex-column justify-content-center">
-                        <p>
-                            <strong>Identifiant IUT :</strong> {{utis.identifiantiut}}
-                        </p>
-                        <p>
-                            <strong>Email :</strong> {{utis.email}}
-                        </p>
-                    </div>
-
-                    <!-- Div de droite avec l'image de représentation -->
-                    <div class="col-md-4 text-center">
-                        <img src="photodeprofil/{{utis.photodeprofil}}" alt="photo de profil de l'utilisateur " class="img-fluid rounded-circle w-50 ">
-                    </div>
+        <div class="col-md-8 mx-auto text-center ">
+            <!-- Deux div en row -->
+            <div class="row d-flex justify-content-center">
+                <!-- Div de gauche -->
+                <div class="col-md-6 d-flex flex-column justify-content-center">
+                    <p>
+                        <strong>Identifiant IUT :</strong> {{ utis.identifiantiut }}
+                    </p>
+                    <p>
+                        <strong>Email :</strong> {{ utis.email }}
+                    </p>
                 </div>
 
-                <!-- Bouton de retour -->
-                <div class="text-center">
-                    <a href="?action=profil" class="btn btn-primary mt-3">Modifier le Profil</a>
+                <!-- Div de droite avec l'image de représentation -->
+                <div class="col-md-4 text-center">
+                    <img src="photodeprofil/{{ utis.photodeprofil }}" alt="photo de profil de l'utilisateur "
+                         class="img-fluid rounded-circle w-50 ">
                 </div>
             </div>
+
+            <!-- Bouton de retour -->
+            <div class="text-center">
+                <a href="?action=profil" class="btn btn-primary mt-3">Modifier le Profil</a>
+            </div>
         </div>
+    </div>
 
 
     <script src="profil.js" defer></script>
