--- a/Views/mesprojets.html.twig
+++ b/Views/mesprojets.html.twig
@@ -15,17 +15,19 @@
 																	{{ cates.nomcate }}
 
 															</p> #}
-                            <img src="img/{{proj.image}}" class="img-fluid pb-2" alt="{{proj.titre}}">
+                            <img src="img/{{ proj.image }}" class="img-fluid pb-2" alt="{{ proj.titre }}">
                             {# <p>Tags :
 								{{ tags.nomtag }}
 							</p> #}
-                            <p>{{proj.descproj}}</p>
-                            <p class="text-end">Créé en : {{proj.anneecrea}}</p>
+                            <p>{{ proj.descproj }}</p>
+                            <p class="text-end">Créé en : {{ proj.anneecrea }}</p>
                             <!-- Ajout du bouton "Voir détails projet" en blanc -->
                             <form id="details" method="post" action="index.php?action=details">
                                 <input type="hidden" id="idutilisateur" name="idutilisateur" value="1">
-                                <input type="hidden" id="idprojet" name="idprojet" value="{{proj.idprojet}}">
-                                <button type="submit" name="valid_details" class="btn btn-outline-light btn-sm">Voir détails projet</button>
+                                <input type="hidden" id="idprojet" name="idprojet" value="{{ proj.idprojet }}">
+                                <button type="submit" name="valid_details" class="btn btn-outline-light btn-sm">Voir
+                                    détails projet
+                                </button>
                             </form>
                         </div>
                     </div>
