--- a/Views/modifprofil.html.twig
+++ b/Views/modifprofil.html.twig
@@ -1,54 +1,62 @@
 {% extends "index.html.twig" %}
 
 {% block section %}
-        <!-- Formulaire -->
-            <form action="index.php" method="post" enctype="multipart/form-data">
-                <fieldset>
-                    <legend class="text-center">Édition du Profil</legend>
-                    <!-- Section pour modifier la photo de profil -->
-                    <div class="col-md-5 mx-auto">
-                        <div class="d-flex flex-column align-items-center justify-content-center">
-                            <p class="mt-3 text-center">Photo de profil actuelle</p>
-                            <!-- Input pour sélectionner une nouvelle image -->
+    <!-- Formulaire -->
+    <form action="index.php" method="post" enctype="multipart/form-data">
+        <fieldset>
+            <legend class="text-center">Édition du Profil</legend>
+            <!-- Section pour modifier la photo de profil -->
+            <div class="col-md-5 mx-auto">
+                <div class="d-flex flex-column align-items-center justify-content-center">
+                    <p class="mt-3 text-center">Photo de profil actuelle</p>
+                    <!-- Input pour sélectionner une nouvelle image -->
 
-                            <img id="profilImage" src="photodeprofil/{{utis.photodeprofil}}" alt="Photo de profil" class="img-thumbnail img-fluid rounded-circle mb-3 h-25 w-25">
-                            <label for="photodeprofil" class="btn btn-secondary mb-3">
-                                Choisir une nouvelle image
-                                <input type="file" id="photodeprofil" name="photodeprofil" accept="img/*" style="display: none;">
-                            </label>
-                        </div>
-                    </div>
-                    <!-- Nom et Prénom en row -->
-                    <div class="row mb-3">
-                        <div class="col">
-                            <label for="prenom" class="form-label">Prénom</label>
-                            <input type="text" class="form-control" id="prenom" name="prenom" placeholder="Votre prénom" required value="{{ utis.prenom }}">
-                        </div>
-                        <div class="col">
-                            <label for="nom" class="form-label">Nom</label>
-                            <input type="text" class="form-control" id="nom" name="nom" placeholder="Votre nom" required value="{{ utis.nom }}">
-                        </div>
-                    </div>
+                    <img id="profilImage" src="photodeprofil/{{ utis.photodeprofil }}" alt="Photo de profil"
+                         class="img-thumbnail img-fluid rounded-circle mb-3 h-25 w-25">
+                    <label for="photodeprofil" class="btn btn-secondary mb-3">
+                        Choisir une nouvelle image
+                        <input type="file" id="photodeprofil" name="photodeprofil" accept="img/*"
+                               style="display: none;">
+                    </label>
+                </div>
+            </div>
+            <!-- Nom et Prénom en row -->
+            <div class="row mb-3">
+                <div class="col">
+                    <label for="prenom" class="form-label">Prénom</label>
+                    <input type="text" class="form-control" id="prenom" name="prenom" placeholder="Votre prénom"
+                           required value="{{ utis.prenom }}">
+                </div>
+                <div class="col">
+                    <label for="nom" class="form-label">Nom</label>
+                    <input type="text" class="form-control" id="nom" name="nom" placeholder="Votre nom" required
+                           value="{{ utis.nom }}">
+                </div>
+            </div>
 
-                    <!-- E-mail -->
-                    <div class="mb-3">
-                        <label for="email" class="form-label">E-mail</label>
-                        <input type="email" class="form-control" id="email" name="email" placeholder="Votre adresse e-mail" required value="{{ utis.email }}">
-                    </div>
+            <!-- E-mail -->
+            <div class="mb-3">
+                <label for="email" class="form-label">E-mail</label>
+                <input type="email" class="form-control" id="email" name="email" placeholder="Votre adresse e-mail"
+                       required value="{{ utis.email }}">
+            </div>
 
-                    <!-- Identifiant IUT -->
-                    <div class="mb-3">
-                        <label for="identifiantiut" class="form-label">Identifiant IUT</label>
-                        <input type="text" class="form-control" id="identifiantiut" name="identifiantiut" placeholder="Votre identifiant IUT" required  value="{{ utis.identifiantiut }}">
-                    </div>
+            <!-- Identifiant IUT -->
+            <div class="mb-3">
+                <label for="identifiantiut" class="form-label">Identifiant IUT</label>
+                <input type="text" class="form-control" id="identifiantiut" name="identifiantiut"
+                       placeholder="Votre identifiant IUT" required value="{{ utis.identifiantiut }}">
+            </div>
 
 
-                    <input  type="hidden" id="idutilisateur" name="idutilisateur" value="{{utis.idutilisateur}}"/>
+            <input type="hidden" id="idutilisateur" name="idutilisateur" value="{{ utis.idutilisateur }}"/>
 
-                    <!-- Bouton Enregistrer les modifications -->
-                    <button type="submit" name="valider_modifuti" id="valider_modifuti" class="btn btn-primary btn-block">Enregistrer les modifications</button>
-                </fieldset>
-            </form>
+            <!-- Bouton Enregistrer les modifications -->
+            <button type="submit" name="valider_modifuti" id="valider_modifuti" class="btn btn-primary btn-block">
+                Enregistrer les modifications
+            </button>
+        </fieldset>
+    </form>
 
 
 
