--- a/Views/projet_choix_modification.html.twig
+++ b/Views/projet_choix_modification.html.twig
@@ -1,16 +1,18 @@
 {% extends "index.html.twig" %}
 
 {% block section %}
-<div class="container p-5">
-<form method="post" action="index.php">
-<fieldset><legend class="pb-3">Choix du projet à modifier</legend>
-    <select name="idprojet" class="form-control form-control-sm mb-3">
-    {% for proj in projets %}
-      <option value="{{proj.idprojet}}">{{proj.titre}} - {{proj.descproj}} - {{proj.liendemo}} - {{proj.idcontexte}}</option>
-    {% endfor %}
-    </select>
-    <button type="submit" name="saisie_modif"  class="btn btn-primary">Valider</button>
-</fieldset>
-</form>
-</div>
+    <div class="container p-5">
+        <form method="post" action="index.php">
+            <fieldset>
+                <legend class="pb-3">Choix du projet à modifier</legend>
+                <select name="idprojet" class="form-control form-control-sm mb-3">
+                    {% for proj in projets %}
+                        <option value="{{ proj.idprojet }}">{{ proj.titre }} - {{ proj.descproj }} - {{ proj.liendemo }}
+                            - {{ proj.idcontexte }}</option>
+                    {% endfor %}
+                </select>
+                <button type="submit" name="saisie_modif" class="btn btn-primary">Valider</button>
+            </fieldset>
+        </form>
+    </div>
 {% endblock %}
