--- a/Views/projet_choix_suppression.html.twig
+++ b/Views/projet_choix_suppression.html.twig
@@ -2,15 +2,17 @@
 
 {% block section %}
     <div class="container p-5">
-    <form method="post" action="index.php">
-    <fieldset><legend class="pb-3">Choix du projet à supprimer</legend>
-    <select name="idprojet" class="form-control form-control-sm mb-3">
-    {% for proj in projets %}
-      <option value="{{proj.idprojet}}">{{proj.titre}} - {{proj.descproj}} - {{proj.anneecrea}}</option>
-    {% endfor %}
-    </select>
-    <button type="submit" name="valider_supp"  class="btn btn-primary">Supprimer</button>
-</fieldset>
-</form>
+        <form method="post" action="index.php">
+            <fieldset>
+                <legend class="pb-3">Choix du projet à supprimer</legend>
+                <select name="idprojet" class="form-control form-control-sm mb-3">
+                    {% for proj in projets %}
+                        <option value="{{ proj.idprojet }}">{{ proj.titre }} - {{ proj.descproj }}
+                            - {{ proj.anneecrea }}</option>
+                    {% endfor %}
+                </select>
+                <button type="submit" name="valider_supp" class="btn btn-primary">Supprimer</button>
+            </fieldset>
+        </form>
     </div>
 {% endblock %}
