--- a/Views/utiadmin.html.twig
+++ b/Views/utiadmin.html.twig
@@ -1,55 +1,63 @@
 {% extends "index.html.twig" %}
 
     {% block section %}
-<form action="index.php" method="post" enctype="multipart/form-data">
-    <fieldset>
-        <legend class="text-center">Ajouter un utilisateur</legend>
-        <!-- Ajout des champs pour l'inscription -->
-        <div class="form-group mb-3">
-            <label for="prenom">Prénom <span class="text-warning">*</span></label>
-            <input type="text" class="form-control" id="prenom" name="prenom" required placeholder="Entrez votre prénom">
-        </div>
+        <form action="index.php" method="post" enctype="multipart/form-data">
+            <fieldset>
+                <legend class="text-center">Ajouter un utilisateur</legend>
+                <!-- Ajout des champs pour l'inscription -->
+                <div class="form-group mb-3">
+                    <label for="prenom">Prénom <span class="text-warning">*</span></label>
+                    <input type="text" class="form-control" id="prenom" name="prenom" required
+                           placeholder="Entrez votre prénom">
+                </div>
 
-        <div class="form-group mb-3">
-            <label for="nom">Nom <span class="text-warning">*</span></label>
-            <input type="text" class="form-control" id="nom" name="nom" required placeholder="Entrez votre nom">
-        </div>
+                <div class="form-group mb-3">
+                    <label for="nom">Nom <span class="text-warning">*</span></label>
+                    <input type="text" class="form-control" id="nom" name="nom" required placeholder="Entrez votre nom">
+                </div>
 
-        <div class="form-group mb-3">
-            <label for="email">Email <span class="text-warning">*</span></label>
-            <input type="email" class="form-control" id="email" name="email" required placeholder="Entrez votre email">
-        </div>
+                <div class="form-group mb-3">
+                    <label for="email">Email <span class="text-warning">*</span></label>
+                    <input type="email" class="form-control" id="email" name="email" required
+                           placeholder="Entrez votre email">
+                </div>
 
-        <div class="form-group mb-3">
-            <label for="identifiantiut">Identifiant IUT <span class="text-warning">*</span></label>
-            <input type="text" class="form-control" id="identifiantiut" name="identifiantiut" required placeholder="Entrez votre identifiant IUT">
-        </div>
+                <div class="form-group mb-3">
+                    <label for="identifiantiut">Identifiant IUT <span class="text-warning">*</span></label>
+                    <input type="text" class="form-control" id="identifiantiut" name="identifiantiut" required
+                           placeholder="Entrez votre identifiant IUT">
+                </div>
 
-        <div class="form-group mb-3">
-            <label for="mdp">Mot de passe <span class="text-warning">*</span></label>
-            <input type="password" class="form-control" id="mdp" name="mdp" required placeholder="Entrez votre mot de passe">
-        </div>
+                <div class="form-group mb-3">
+                    <label for="mdp">Mot de passe <span class="text-warning">*</span></label>
+                    <input type="password" class="form-control" id="mdp" name="mdp" required
+                           placeholder="Entrez votre mot de passe">
+                </div>
 
-        <div class="form-group mb-3">
-            <label for="photodeprofil">Votre photo de profil </label>
-            <input type="file" class="form-control-file" id="photodeprofil" name="photodeprofil">
-        </div>
+                <div class="form-group mb-3">
+                    <label for="photodeprofil">Votre photo de profil </label>
+                    <input type="file" class="form-control-file" id="photodeprofil" name="photodeprofil">
+                </div>
 
-        <button type="submit" name="ajout_uti" value="ajout_uti" class="btn btn-primary w-25 mb-5">Ajouter un Utilisateur</button>
-    </fieldset>
-</form>
+                <button type="submit" name="ajout_uti" value="ajout_uti" class="btn btn-primary w-25 mb-5">Ajouter un
+                    Utilisateur
+                </button>
+            </fieldset>
+        </form>
 
-<form action="index.php" method="post">
-    <label for="idutilisateur" class="form-label">Supprimer un utilisateur</label>
-    <select class="form-select" id="idutilisateur" name="idutilisateur">
-        {% for uti in utis %}
-            <option value="{{ uti.idutilisateur }}">
-                {{ uti.prenom }} - {{ uti.nom }} - {{ uti.email }} - {{ uti.identifiantiut }}
-            </option>
-        {% endfor %}
-    </select>
-        <button type="submit" name="supp_uti" value="supp_uti" class="btn btn-primary mt-3">Supprimer l'utilisateur sélectionné</button>
-</form>
+        <form action="index.php" method="post">
+            <label for="idutilisateur" class="form-label">Supprimer un utilisateur</label>
+            <select class="form-select" id="idutilisateur" name="idutilisateur">
+                {% for uti in utis %}
+                    <option value="{{ uti.idutilisateur }}">
+                        {{ uti.prenom }} - {{ uti.nom }} - {{ uti.email }} - {{ uti.identifiantiut }}
+                    </option>
+                {% endfor %}
+            </select>
+            <button type="submit" name="supp_uti" value="supp_uti" class="btn btn-primary mt-3">Supprimer l'utilisateur
+                sélectionné
+            </button>
+        </form>
 
     {% endblock %}
 
