--- a/Views/utilisateur_connexion.html.twig
+++ b/Views/utilisateur_connexion.html.twig
@@ -1,30 +1,34 @@
 {% extends "index.html.twig" %}
 
 {% block section %}
-  <div class="container d-flex justify-content-center align-items-center">
-    <div id="form" class="contact-form m-4 p-4 w-50">
-      <div class="text-center"> <!-- Ajout de la classe center-image -->
-        <img id="connex" src="img/LOGO_MMi.webp" class="img-fluid mb-4" alt="Header Image">
-      </div>
+    <div class="container d-flex justify-content-center align-items-center">
+        <div id="form" class="contact-form m-4 p-4 w-50">
+            <div class="text-center"> <!-- Ajout de la classe center-image -->
+                <img id="connex" src="img/LOGO_MMi.webp" class="img-fluid mb-4" alt="Header Image">
+            </div>
 
-      <form action="index.php" method="post">
-        <fieldset><legend class="text-center">Connexion à un compte</legend>
-        <div class="form-group mb-3">
-          <label for="login">Email</label>
-          <input type="email" class="form-control" id="login" name="login" required placeholder="Entrez votre email">
+            <form action="index.php" method="post">
+                <fieldset>
+                    <legend class="text-center">Connexion à un compte</legend>
+                    <div class="form-group mb-3">
+                        <label for="login">Email</label>
+                        <input type="email" class="form-control" id="login" name="login" required
+                               placeholder="Entrez votre email">
+                    </div>
+
+                    <div class="form-group mb-3">
+                        <label for="passwd">Mot de passe</label>
+                        <input type="password" class="form-control" id="passwd" name="passwd" required
+                               placeholder="Entrez votre mot de passe">
+                    </div>
+
+                    <button type="submit" name="connexion" value="connexion" class="btn btn-primary w-100">Connexion
+                    </button>
+                </fieldset>
+            </form>
+
+            <p class="mt-3 text-left">Pas de compte ? <a href="?action=inscription">Inscrivez-vous</a></p>
         </div>
-
-        <div class="form-group mb-3">
-          <label for="passwd">Mot de passe</label>
-          <input type="password" class="form-control" id="passwd" name="passwd" required placeholder="Entrez votre mot de passe">
-        </div>
-
-        <button type="submit" name="connexion" value="connexion" class="btn btn-primary w-100">Connexion</button>
-        </fieldset>
-      </form>
-
-      <p class="mt-3 text-left">Pas de compte ? <a href="?action=inscription">Inscrivez-vous</a></p>
     </div>
-  </div>
 
 {% endblock %}
