--- a/Views/inscription.html.twig
+++ b/Views/inscription.html.twig
@@ -43,7 +43,7 @@
                     </div>
 
                     <div class="form-group mb-3">
-                        <label for="photodeprofil">Votre photo de profil </label>
+                        <label for="photodeprofil">Votre photo de profil <span class="text-warning">*</span></label>
                         <input type="file" class="form-control-file" id="photodeprofil" name="photodeprofil">
                     </div>
 
