--- a/Views/projet_modification.html.twig
+++ b/Views/projet_modification.html.twig
@@ -80,7 +80,7 @@
             <!-- Bouton en dehors des colonnes, centré et plus large -->
             <div class="col-lg-12 text-center mt-4">
                 <button type="submit" name="valider_modif" value="valider_modif"
-                        class="btn btn-primary btn-lg px-5 py-2">Modifier le proj
+                        class="btn btn-primary btn px-5 py-2">Modifier le projet
                 </button>
             </div>
 
