--- a/Views/accueil.html.twig
+++ b/Views/accueil.html.twig
@@ -26,7 +26,7 @@
         </p>
     </div>
 
-    <div id="head-container" class="text-center">
+    <div id="boutonproj" class="text-center">
         <a href="?action=projets" class="btn btn-outline-light col-12 col-md-6 col-lg-4 py-3 py-md-5 mt-3"
            role="button">Découvrir les projets des étudiants</a>
     </div>
