--- a/Views/index.html.twig
+++ b/Views/index.html.twig
@@ -20,9 +20,8 @@
     <!-- Container wrapper -->
     <div id="menu" class="container-fluid">
         <!-- Navbar brand -->
-        <a class="navbar-brand" href="#top"><img id="logo" src="img/LOGO_MMi.webp" alt="logo de mmi castres"
+        <a class="navbar-brand" href="#top"><img id="logoMMI" src="img/LOGO_MMi.webp" alt="logo de mmi castres"
                                                  class="img-fluid"></a>
-
         <!-- Navbar toggler button -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarButtonsExample">
@@ -47,6 +46,7 @@
                 {% endif %}
 
                 {% if admin == "oui" %}
+                <li class="nav-item">
                     <div class="dropdown">
                         <button type="button" class="btn btn-outline-light dropdown-toggle" data-bs-toggle="dropdown">
                             Espace Admin
@@ -57,6 +57,7 @@
                             <li><a class="dropdown-item" href="?action=utiadmin">Gestion Utilisateur</a></li>
                         </ul>
                     </div>
+                </li>
                 {% endif %}
             </ul>
             <!-- right links -->
@@ -107,8 +108,8 @@
             <li class="nav-item">
                 <p class="text-center text-body-secondary">© 2023 Lucas Boustens. All rights reserved.</p>
             </li>
-            <li class="nav-item"><a href="#top"><img id="logo" src="img/LOGO_MMi.webp"
-                                                     alt="logo de mmi castres"></a></li>
+            <li class="nav-item"><a href="#top"><img id="LogoMMIfoot" src="img/LOGO_MMi.webp"
+                                                     alt="logo de mmi castres" class="img-fluid"></a></li>
             <li class="nav-item d-flex flex-row"><a href="?action=mentions"
                                                     class="nav-link px-2 text-body-secondary">Mentions Légales</a> <a
                         href="?action=politique"
