--- a/Views/projets_liste.html.twig
+++ b/Views/projets_liste.html.twig
@@ -8,8 +8,7 @@
                 <div class="form-group row mb-2">
                     <label for="titre" class="col-sm-2 col-form-label col-form-label-sm">Titre</label>
                     <div class="col-sm-10">
-                        <input type="text" id="titre" name="titre" class="form-control form-control-sm"
-                               placeholder="Choisir un titre"/>
+                        <input type="text" id="titre" name="titre" class="form-control form-control-sm" placeholder="Choisir un titre"/>
                     </div>
                 </div>
                 <div class="form-group row">
@@ -38,8 +37,8 @@
                         <p>{{ proj.descproj }}</p>
                         <p class="text-end">Créé en : {{ proj.anneecrea }}</p>
                         <!-- Ajout du bouton "Voir détails projet" en blanc -->
-                        <form id="details" method="post" action="index.php?action=details">
-                            <input type="hidden" id="idprojet" name="idprojet" value="{{ proj.idprojet }}">
+                        <form method="post" action="index.php?action=details">
+                            <input type="hidden" id="{{ proj.idprojet }}" name="idprojet" value="{{ proj.idprojet }}">
                             <button type="submit" name="valid_details" class="btn btn-outline-light btn-sm">Voir détails
                                 projet
                             </button>
